chore: drop mozi 아이콘 배치

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -21,3 +21,10 @@
   align-items: center;
   justify-content: center;
 }
+
+main {
+  height: calc(100vh - 60px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
